package me.yonghong.patterns.creational.factorymethod;

/**
 * @author yonghongwang#163.com
 * @since 2021/8/6
 */
public interface Weapon {

    WeaponType getWeaponType();
}
